# sbcube

./: README.md  cuda-test.py  environment.yml
conda/: post-install.sh
projects/4Dplot/: README.md  bayes_opt.csv  environment.yml  plot.py
projects/bayes-opt-test/example/: bayes.yml  main.py  requirement.yml
projects/bayes-opt-test/nautic/: context.py
projects/bayes-opt-test/nautic/tasks/dse/: bayes_opt.py
projects/trustworthy_dl/: .gitignore  README.md  conda.env.build  environment.yml  keras_pred.py  pyproject.toml  run.sh  run_lenet.sh  run_resnet.sh  run_train_inf.sh  run_train_inf_resnet.sh  show_csv.py  train_bayesian_opt.py  train_bayesian_opt_full.py  train_inf_keras.py  train_keras.py  train_qkeras.py  train_qkeras_mcme.py
projects/trustworthy_dl/conda/: build.sh  meta.yaml  post-install.sh  reqs.py
projects/trustworthy_dl/conda/script/: activate.template  deactivate.template  run.sh
projects/trustworthy_dl/converter/keras/: MCDropout.py  Masksembles.py
projects/trustworthy_dl/models/: model_utils.py  models.py  qmodels.py
projects/trustworthy_dl/scripts/bayes_opt/: run_lenet_acc.sh  run_lenet_acc_old.sh  run_lenet_ape.sh  run_lenet_balance.sh  run_lenet_ece.sh  run_lenet_flops.sh  run_lenet_test.sh  run_resnet_acc.sh  run_resnet_ape.sh  run_resnet_balance.sh  run_resnet_ece.sh  run_resnet_flops.sh  run_resnet_test.sh
